--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -7,23 +7,22 @@
   justify-content: center;
   border: 1px solid black;
   margin: 0 7.5px 15px;
-  background-position: center;
-  background-size: cover;
   overflow: hidden;
+
   &:hover {
     cursor: pointer;
-  
+
     & .background-image {
       transform: scale(1.1);
       transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
     }
-  
+
     & .content {
       opacity: 0.9;
     }
   }
-  
-  &.large{
+
+  &.large {
     height: 380px;
   }
 
@@ -34,13 +33,14 @@
   &:last-child {
     margin-left: 7.5px;
   }
-  .background-image{
-    height: 100%;
+
+  .background-image {
     width: 100%;
+    height: 100%;
     background-size: cover;
     background-position: center;
-    
   }
+
   .content {
     height: 90px;
     padding: 0 25px;
@@ -55,7 +55,7 @@
 
     .title {
       font-weight: bold;
-      margin-bottom: 6px;
+      margin: 0 6px 0;
       font-size: 22px;
       color: #4a4a4a;
     }
@@ -64,8 +64,5 @@
       font-weight: lighter;
       font-size: 16px;
     }
-
   }
-  
 }
-
